2018-01-19  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	[BZ #22685]
	* sysdeps/powerpc/powerpc32/sysdep.h (ABORT_TRANSACTION_IMPL): Renamed
	from ABORT_TRANSACTION.
	(ABORT_TRANSACTION): Redirect to ABORT_TRANSACTION_IMPL.
	* sysdeps/powerpc/powerpc64/sysdep.h (ABORT_TRANSACTION,
	ABORT_TRANSACTION_IMPL): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/not-errno.h: New file.  Reuse
	Linux code, but remove the code that aborts transactions.

2017-07-24  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #21744]
	* elf/dl-tunables.c: Include not-errno.h header.
	* include/unistd.h (__access_noerrno): Remove definition.
	* sysdeps/unix/sysv/linux/access.c (__access_noerrno): Likewise.
	* sysdeps/generic/not-errno.h: New file.
	* sysdeps/unix/sysv/linux/not-errno.h: Likewise.

2018-01-18  Arjun Shankar  <arjun@redhat.com>

	[BZ #22343]
	[BZ #22774]
	CVE-2018-6485
	CVE-2018-6551
	* malloc/malloc.c (checked_request2size): call REQUEST_OUT_OF_RANGE
	after padding.
	(_int_memalign): check for integer overflow before calling
	_int_malloc.
	* malloc/tst-malloc-too-large.c: New test.
	* malloc/Makefile: Add tst-malloc-too-large.

2018-01-19  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #22715]
	* sysdeps/x86_64/dl-trampoline.h (_dl_runtime_profile): Properly
	align La_x86_64_retval to VEC_SIZE.

2018-01-16  Florian Weimer  <fweimer@redhat.com>

	* nptl/Makefile [$(have-cxx-thread_local)] (tests-unsupported):
	Move tst-thread-exit-clobber ...
	[$(CXX)] (tests-unsupported): ... to here.

2018-01-11  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/gnu/unwind-resume.c (__libgcc_s_init): Update comment
	and error message.

2018-01-16  Florian Weimer  <fweimer@redhat.com>

	* nptl/Makefile (CFLAGS-tst-minstack-throw.o): Compile in C++11
	mode with GNU extensions.

2018-01-15  Florian Weimer  <fweimer@redhat.com>

	[BZ #22636]
	* nptl/tst-minstack-throw.cc: New file.
	* nptl/Makefile (tests): Add tst-minstack-throw.